fixed management layout issue

--- a/themes/default/assets/css/style-school.css
+++ b/themes/default/assets/css/style-school.css
@@ -3,3 +3,13 @@
 .schoolindex{
     padding: 4rem;
 }
+
+.card {
+    margin-bottom: 25px;;
+}
+
+.card .card-body {
+    height: 300px;
+    overflow-x: hidden;
+    overflow-y: auto;
+}
